--- a/Resources/views/Form/base.html.twig
+++ b/Resources/views/Form/base.html.twig
@@ -13,20 +13,17 @@
 {% endspaceless %}
 {% endblock field_errors %}
 
-{# i18n #}
+{# i18n & required #}
 {% block field_label %}
-{% spaceless %}
-    <label for="{{ id }}">{{ id|replace({'_':'.'})|trans }}</label>
-{% endspaceless %}
-{% endblock field_label %}
-
-{# required #}
-{% block field_label %}
-    {{ parent() }}
-
-    {% if required %}
-        <span class="required" title="This field is required">*</span>
-    {% endif %}
+    {#{ parent() }#}
+    {% spaceless %}
+    <label for="{{ id }}">
+      {{ id|replace({'_':'.'})|trans }}
+      {% if required %}
+          <span class="required" title="This field is required">*</span>
+      {% endif %}
+    </label>
+    {% endspaceless %}
 {% endblock %}
 
 {# help #}
